--- a/NexterPremierLeague1.html
+++ b/NexterPremierLeague1.html
@@ -18,6 +18,15 @@
     },
 
 {
+     "name": "True Premier Football 1FHD",
+     "image": "https://dookeela.live/uploads/1664499665.png",
+     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=38&tv=TruePremierFootball1",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
+
+{
      "name": "True Premier Football 1 HD",
      "image": "https://dookeela.live/uploads/1664499665.png",
      "url": "https://streaming.livescorethai.net/iptv/epl-1.stream/chunks.m3u8",
@@ -172,6 +181,14 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
      "info": "NexterPremierLeague",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
     },
+{
+     "name": "True Premier Football 2FHD",
+     "image": "https://dookeela.live/uploads/1664499673.png",
+     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=39&tv=TruePremierFootball2",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
     {
      "name": "True Premier Football 2",
      "image": "https://dookeela.live/uploads/1664499673.png",
@@ -316,6 +333,14 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
      "info": "NexterPremierLeague",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
     },
+{
+     "name": "True Premier Football 3FHD",
+     "image": "https://dookeela.live/uploads/1664499681.png",
+     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=40&tv=TruePremierFootball3",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
     {
      "name": "True Premier Football 3",
      "image": "https://dookeela.live/uploads/1664499681.png",
@@ -410,6 +435,14 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
      "info": "NexterPremierLeague",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
     },
+{
+     "name": "True Premier Football 4FHD",
+     "image": "https://dookeela.live/uploads/1664499692.png",
+     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=41&tv=TruePremierFootball4",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
     {
      "name": "True Premier Football 4",
      "image": "https://dookeela.live/uploads/1664499692.png",
@@ -466,6 +499,14 @@ url:"https://www.andaman888th.com/%E0%B8%94%E0%B8%B9%E0%B8%9A%E0%B8%AD%E0%B8%A5%
      "name": "True Premier Football 5ID",
      "image": "https://dookeela.live/uploads/1664499700.png",
      "url": "https://playidtv24.vercel.app/stream/now/premier5.m3u8",
+     "referer": "https://freetvdd.com",
+     "info": "NexterPremierLeague",
+     "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
+    },
+{
+     "name": "True Premier Football 5FHD",
+     "image": "https://dookeela.live/uploads/1664499700.png",
+     "url": "https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=42&tv=TruePremierFootball5",
      "referer": "https://freetvdd.com",
      "info": "NexterPremierLeague",
      "userAgent": "Mozilla/5.0 (Windows NT 6.1; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/109.0.0.0 Safari/537.36 Edg/109.0.1518.140", "online": "true" 
