--- a/DigitalTV.html
+++ b/DigitalTV.html
@@ -192,7 +192,150 @@
 
 
 
+{
+"name":"3HD",
+"image":"https://img2.pic.in.th/pic/3dde090469d413f2a.png",
+"url":"https://playidtv24.vercel.app/stream/3bbtv/ch3.html",
+"referer": "",
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", "desktop": "true"
+},
 
+{
+"name":"5HD",
+"image":"https://img5.pic.in.th/file/secure-sv1/55fdc56df674669048.png",
+"url":"https://dookeela.live/live-tv/ch5hd",
+"referer": "https://dookeela.live/",
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", "desktop": "true"
+},
+
+{
+"name":"7HD",
+"image":"https://img5.pic.in.th/file/secure-sv1/776f6fb7f1788e6f6c.png",
+"url":"https://playidtv24.vercel.app/stream/3bbtv/ch7.html",
+"referer": "",
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", "desktop": "true"
+},
+
+
+{
+"name":"MCOT HD",
+"image":"https://img2.pic.in.th/pic/99ca0b6ba522eac5f.png",
+"url":"https://playidtv24.vercel.app/stream/3bbtv/mcothd.html",
+"referer": "",
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", "desktop": "true"
+},
+
+{
+"name":"NBT HD",
+"image":"https://img5.pic.in.th/file/secure-sv1/nbt425e8775a21bc447.png",
+"url":"https://dookeela.live/live-tv/nbt2hd",
+"referer": "https://dookeela.live/",
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", "desktop": "true"
+},
+
+{
+"name":"TPBS HD",
+"image":"https://img5.pic.in.th/file/secure-sv1/tpbs1edaf948b0b57bc5.png",
+"url":"https://dookeela.live/live-tv/thaipbs",
+"referer": "https://dookeela.live/",
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", "desktop": "true"
+},
+
+{
+"name":"PPTV HD",
+"image":"https://img2.pic.in.th/pic/pptv08dda17560a5fb9f.png",
+"url":"https://playidtv24.vercel.app/stream/3bbtv/pptv.html",
+"referer": "",
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", "desktop": "true"
+},
+
+{
+"name":"AMARIN",
+"image":"https://img5.pic.in.th/file/secure-sv1/ama9aed94e68b530e43.png",
+"url":"https://playidtv24.vercel.app/stream/3bbtv/amarin.html",
+"referer": "",
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", "desktop": "true"
+},
+
+{
+"name":"THAIRATH TV",
+"image":"https://img5.pic.in.th/file/secure-sv1/tha.png",
+"url":"https://playidtv24.vercel.app/stream/3bbtv/thairathtv.html",
+"referer": "",
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", "desktop": "true"
+},
+
+{
+"name":"WORKPOINT",
+"image":"https://img5.pic.in.th/file/secure-sv1/wor.png",
+"url":"https://playidtv24.vercel.app/stream/3bbtv/wp.html",
+"referer": "",
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", "desktop": "true"
+},
+
+{
+"name":"ONEHD",
+"image":"https://img2.pic.in.th/pic/one20316ac8059ebfa3.png",
+"url":"https://playidtv24.vercel.app/stream/3bbtv/one31.html",
+"referer": "https://www.inwiptv.com/",
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", "desktop": "true"
+},
+
+{
+"name":"GMM25",
+"image":"https://img5.pic.in.th/file/secure-sv1/gmm.png",
+"url":"https://playidtv24.vercel.app/stream/3bbtv/gmm25.html",
+"referer": "",
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", "desktop": "true"
+},
+
+{
+"name":"TNN16",
+"image":"https://img2.pic.in.th/pic/tnn.png",
+"url":"https://dookeela.live/live-tv/tnn",
+"referer": "https://dookeela.live/",
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", "desktop": "true"
+},
+
+{
+"name":"TRUE4U",
+"image":"https://img2.pic.in.th/pic/t4u.png",
+"url":"https://playidtv24.vercel.app/stream/3bbtv/true4u.html ",
+"referer": "",
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", "desktop": "true"
+},
+
+{
+"name":"JKN18",
+"image":"https://img2.pic.in.th/pic/d7038718324d74432714059554883f57.png",
+"url":"https://dookeela.live/live-tv/jkn18",
+"referer": "https://dookeela.live/",
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", "desktop": "true"
+},
+
+{
+"name":"MONO29",
+"image":"https://img2.pic.in.th/pic/mono2bb9d363e48a8692.png",
+"url":"https://playidtv24.vercel.app/stream/3bbtv/mono29.html",
+"referer": "",
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", "desktop": "true"
+},
+
+{
+"name":"NATION TV",
+"image":"https://img2.pic.in.th/pic/jknffaac88fe840a9a8.png",
+"url":"https://playidtv24.vercel.app/stream/3bbtv/nation.html",
+"referer": "",
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", "desktop": "true"
+},
+
+{
+"name":"CH8",
+"image":"https://img5.pic.in.th/file/secure-sv1/ch8.png",
+"url":"https://playidtv24.vercel.app/stream/3bbtv/ch8.html",
+"referer": "",
+"userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 14_4_2 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/14.0 Mobile/15E148 Safari/604.1", "desktop": "true"
+},
 
 
 
