--- a/MovieChannel.html
+++ b/MovieChannel.html
@@ -13,6 +13,15 @@
      "referer": "https://dookeela.live/",
      "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36"
     },
+{
+"name": "HBO HD",  
+"image": "https://img5.pic.in.th/file/secure-sv1/HBOa21ee1e5abf27176.png",  
+"url" :"https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=274&tv=HBO", 
+"referer": "https://goal-th.com/", 
+"info": "", 
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.107 Safari/537.36", 
+"info": "", "playInNatPlayer":"true" 
+},
 
     {
      "name": "HBO Family",
@@ -21,6 +30,15 @@
      "referer": "https://dookeela.live/",
      "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36"
     },
+{
+"name": "HBO FAMILY",  
+"image": "https://img2.pic.in.th/pic/FAMI1111.png",  
+"url" :"https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=277&tv=HBOFamily", 
+"referer": "https://goal-th.com/", 
+"info": "", 
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.107 Safari/537.36", 
+"info": "", "playInNatPlayer":"true" 
+},
     {
      "name": "HBO Hits",
      "image": "https://dookeela.live/uploads/1703786599.png",
@@ -28,6 +46,15 @@
      "referer": "https://dookeela.live/",
      "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36"
     },
+{
+"name": "HBO HITS",  
+"image": "https://img5.pic.in.th/file/secure-sv1/HIT11.png",  
+"url" :"https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=276&tv=HBOHits", 
+"referer": "https://goal-th.com/", 
+"info": "", 
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.107 Safari/537.36", 
+"info": "", "playInNatPlayer":"true" 
+},
     {
      "name": "HBO Signature",
      "image": "https://dookeela.live/uploads/1703786305.png",
@@ -35,6 +62,15 @@
      "referer": "https://dookeela.live/",
      "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36"
     },
+{
+"name": "HBO SIGNATURE",  
+"image": "https://img5.pic.in.th/file/secure-sv1/SIG11.png",  
+"url" :"https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=275&tv=HBOSignature", 
+"referer": "https://goal-th.com/", 
+"info": "", 
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.107 Safari/537.36", 
+"info": "", "playInNatPlayer":"true" 
+},
     {
      "name": "CINEMAX",
      "image": "https://dookeela.live/uploads/1703786799.png",
@@ -42,6 +78,15 @@
      "referer": "https://dookeela.live/",
      "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36"
     },
+{
+"name": "CINEMAX",  
+"image": "https://img2.pic.in.th/pic/CI123.png",  
+"url" :"https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=278&tv=CINEMAX", 
+"referer": "https://goal-th.com/", 
+"info": "", 
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.107 Safari/537.36", 
+"info": "", "playInNatPlayer":"true" 
+},
     {
      "name": "AXN HD",
      "image": "https://dookeela.live/uploads/1719897010.png",
@@ -119,6 +164,15 @@
      "referer": "https://dookeela.live/",
      "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36"
     },
+{
+"name": "HIST MOVIES",  
+"image": "https://img5.pic.in.th/file/secure-sv1/HITS-M.png",  
+"url" :"https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=356&tv=HITSMOVIES", 
+"referer": "https://goal-th.com/", 
+"info": "", 
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.107 Safari/537.36", 
+"info": "", "playInNatPlayer":"true" 
+},
     {
      "name": "HITS MOVIES",
      "image": "https://dookeela.live/uploads/1714100677.png",
@@ -126,6 +180,15 @@
      "referer": "https://dookeela.live/",
      "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36"
     },
+{
+"name": "HITS",  
+"image": "https://img5.pic.in.th/file/secure-sv1/HITSa0f9fecd46326f1a.png",  
+"url" :"https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=304&tv=HITS", 
+"referer": "https://goal-th.com/", 
+"info": "", 
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.107 Safari/537.36", 
+"info": "", "playInNatPlayer":"true" 
+},
     {
      "name": "Warner TV",
      "image": "https://dookeela.live/uploads/1703832225.png",
@@ -133,6 +196,15 @@
      "referer": "https://dookeela.live/",
      "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36"
     },
+{
+"name": "WARNER",  
+"image": "https://img5.pic.in.th/file/secure-sv1/WAR111.png",  
+"url" :"https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=282&tv=WarnerTV", 
+"referer": "https://goal-th.com/", 
+"info": "", 
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.107 Safari/537.36", 
+"info": "", "playInNatPlayer":"true" 
+},
     {
      "name": "3BB Asian",
      "image": "https://dookeela.live/uploads/1703829940.png",
@@ -242,6 +314,15 @@
      "referer": "https://dookeela.live/",
      "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36"
     },
+{
+"name": "PARAMOUNT",  
+"image": "https://img5.pic.in.th/file/secure-sv1/PARA.png",  
+"url" :"https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=303&tv=ParamountNetwork", 
+"referer": "https://goal-th.com/", 
+"info": "", 
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.107 Safari/537.36", 
+"info": "", "playInNatPlayer":"true" 
+},
     {
      "name": "ROCK Action",
      "image": "https://dookeela.live/uploads/1718690264.png",
