--- a/Kids.html
+++ b/Kids.html
@@ -11,6 +11,15 @@
      "referer": "https://dookeela.live/",
      "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36"
     },
+{
+"name": "ANIMAX",  
+"image": "https://img5.pic.in.th/file/secure-sv1/ANIMAX111.png",  
+"url" :"https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=284&tv=Animax|Singapore", 
+"referer": "https://goal-th.com/", 
+"info": "", 
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.107 Safari/537.36", 
+"info": "", "playInNatPlayer":"true" 
+},
     {
      "name": "Astro Ceria",
      "image": "https://dookeela.live/uploads/1721687988.png",
@@ -32,6 +41,15 @@
      "referer": "https://dookeela.live/",
      "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36"
     },
+{
+"name": "CARTOONCLUB",  
+"image": "https://img2.pic.in.th/pic/crop.png",  
+"url" :"https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=290&tv=CartoonClubHD", 
+"referer": "https://goal-th.com/", 
+"info": "", 
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.107 Safari/537.36", 
+"info": "", "playInNatPlayer":"true" 
+},
     {
      "name": "Cartoon Network",
      "image": "https://dookeela.live/uploads/1708344243.png",
@@ -39,6 +57,15 @@
      "referer": "https://dookeela.live/",
      "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36"
     },
+{
+"name": "CN Cartoon Network",  
+"image": "https://img5.pic.in.th/file/secure-sv1/cn111.png",  
+"url" :"https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=314&tv=CartoonNetwork", 
+"referer": "https://goal-th.com/", 
+"info": "", 
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.107 Safari/537.36", 
+"info": "", "playInNatPlayer":"true" 
+},
     {
      "name": "cartoonito",
      "image": "https://dookeela.live/uploads/1704039063.png",
@@ -53,6 +80,7 @@
      "referer": "https://dookeela.live/",
      "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36"
     },
+
     {
      "name": "Disney Channel",
      "image": "https://dookeela.live/uploads/1716361978.png",
@@ -88,6 +116,15 @@
      "referer": "https://dookeela.live/",
      "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36"
     },
+{
+"name": "NICK JR",  
+"image": "https://img2.pic.in.th/pic/NICKJR111.png",  
+"url" :"https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=316&tv=NickJr.", 
+"referer": "https://goal-th.com/", 
+"info": "", 
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.107 Safari/537.36", 
+"info": "", "playInNatPlayer":"true" 
+},
     {
      "name": "Nickelodeon",
      "image": "https://dookeela.live/uploads/1708344306.png",
@@ -95,6 +132,15 @@
      "referer": "https://dookeela.live/",
      "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36"
     },
+{
+"name": "NICKLODEON",  
+"image": "https://img5.pic.in.th/file/secure-sv1/0000fb6132afe0dbb3fb.png",  
+"url" :"https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=315&tv=Nickelodeon", 
+"referer": "https://goal-th.com/", 
+"info": "", 
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.107 Safari/537.36", 
+"info": "", "playInNatPlayer":"true" 
+},
     {
      "name": "nicktoons | Germany",
      "image": "https://dookeela.live/uploads/1713282303.png",
@@ -109,6 +155,24 @@
      "referer": "https://dookeela.live/",
      "userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/106.0.0.0 Safari/537.36"
     }
+{
+"name": "BOOMERANG",  
+"image": "https://img2.pic.in.th/pic/BBOM111.png",  
+"url" :"https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=291&tv=Boomerang", 
+"referer": "https://goal-th.com/", 
+"info": "", 
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.107 Safari/537.36", 
+"info": "", "playInNatPlayer":"true" 
+},
+{
+"name": "CARTOONITO",  
+"image": "https://img2.pic.in.th/pic/1233897397499c45e7e.png",  
+"url" :"https://goal-th.com/%E0%B8%8A%E0%B9%88%E0%B8%AD%E0%B8%87%E0%B8%A3%E0%B8%B2%E0%B8%A2%E0%B8%81%E0%B8%B2%E0%B8%A3%E0%B8%97%E0%B8%B5%E0%B8%A7%E0%B8%B5/?id=285&tv=cartoonito", 
+"referer": "https://goal-th.com/", 
+"info": "", 
+"userAgent": "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/92.0.4515.107 Safari/537.36", 
+"info": "", "playInNatPlayer":"true" 
+},
 
 
 ]
